# energy

./: .env.example  .gitignore  electricity-consumption.csv  nas.ipynb  octopus.ipynb  octopus.py  pyproject.toml  tariffs.ipynb  tariffs.py
data/: 2023-09-01-2024-09-02-electricity-consumption.csv  gas-consumption.csv
