[project]
name = "energy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "plotly",
  "matplotlib",
  "python-dotenv",
  "pandas",
  "requests",
  "scikit-learn",
  "nbformat",      # for plotly
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 110

[tool.uv]
dev-dependencies = ["ruff", "ipykernel"]
